--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -30,3 +30,37 @@ border-style: solid;
 h1 {
   text-align: center;
 }
+
+
+#logout{
+  position: absolute;
+  top: 70px;
+  right: 16px;
+  font-size: 18px;
+}
+h2#typing-effect {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid #000;
+}
+
+@keyframes typing {
+  0% {
+      width: 0;
+  }
+  50% {
+      width: 0;
+  }
+  100% {
+      width: 100%;
+  }
+}
+
+@keyframes blink-caret {
+  from, to {
+      border-color: transparent;
+  }
+  50% {
+      border-color: #000;
+  }
+}
