--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -64,3 +64,12 @@ h2#typing-effect {
       border-color: #000;
   }
 }
+body {
+  background-image: url(../public/image6.webp);
+}
+th {
+  color: #000; /* Dark black color */
+}
+#bookingTable{
+  background-color: darkorange;
+}
